[package]
name = "flare"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rocksdb = "0.20"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sanitize-filename = "0.5"
tokio-util = "0.7.16"
futures-util = "0.3.31"
libc = "0.2.169"
reqwest = { version =  "0.12.25", features = ["stream"] }
uuid = { version = "1.19.0", features = ["v4"] }
async-stream = "0.3.6"
futures-core = "0.3.31"
